[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Max.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Color_Fill_2_copy.png" type="Texture" id=2]
[ext_resource path="res://Max_runes.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Adventurer.ttf"

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Adventurer.ttf"

[sub_resource type="DynamicFont" id=4]
size = 46
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 13
font_data = SubResource( 1 )

[node name="Max" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.0235294, 0.0235294, 0.0235294, 0.815686 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = 137.09
margin_right = 69.0
margin_bottom = 165.09
custom_fonts/font = SubResource( 2 )
text = "Press Enter"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -176.0
margin_right = 325.0
margin_bottom = 176.0
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TextureRect"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 325.527, 40 )
scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 82, -1, 132, 95 )

[node name="Label" type="Label" parent="TextureRect/Sprite"]
anchor_left = 0.5
anchor_top = 0.221
anchor_right = 0.5
anchor_bottom = 0.221
margin_left = -228.056
margin_top = -47.995
margin_right = 108.944
margin_bottom = 4.005
custom_fonts/font = SubResource( 4 )
text = "Runes of Midar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = 62.0
margin_right = 144.0
margin_bottom = 120.0
custom_fonts/normal_font = SubResource( 5 )
visible_characters = 0
percent_visible = 0.0
text = "	Obtaining one of these runes will increase the owners maximum health by one permantly.They can be found around the world."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -106.364
margin_right = 144.0
margin_bottom = -62.3637
custom_fonts/normal_font = SubResource( 5 )
visible_characters = 0
percent_visible = 0.0
text = "	These runes were created by the great Wizzard Midar. They constrain the power to improve someon health and fortune."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="TextureRect"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 321.422, 172.647 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
region_rect = Rect2( 50.1156, 34.0037, 12.8512, 12.8512 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Tween3" type="Tween" parent="."]

[node name="Tween4" type="Tween" parent="."]

[node name="Tween5" type="Tween" parent="."]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween2" to="." method="_on_Tween2_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween3" to="." method="_on_Tween3_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween4" to="." method="_on_Tween4_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween5" to="." method="_on_Tween5_tween_all_completed"]
